Added some notes to RMI and patterns